<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="register_pet">Register pet</string>
    <string name="pet_information">Pet information</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="birth">Birth</string>
    <string name="owner_information">Owner information</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="save">save</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="wrong_email_password">Wrong email or password!</string>
    <string name="empty_fields">There are empty fields!</string>
    <string name="customers">Customers</string>
    <string name="signed_in">Trying to sign in</string>
    <string name="information">Information</string>
    <string name="edit">edit</string>
    <string name="no_phone_call">There is no app that support phone call</string>
    <string name="no_sms_sending">There is no app that support sms sending</string>
    <string name="no_email_sending">There is no app that support email sending</string>
    <string name="next">next</string>
    <string name="register_owner">Register owner</string>
    <string name="log_out">Log out</string>
    <string name="delete">delete</string>
    <string name="delete_item">Are you sure want to delete this item?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="successfully_deleted">item successfully deleted</string>
    <string name="same_phone">Exist same owner with same phone: %s</string>
    <string name="same_email">Exist same owner with same email: %s</string>
    <string name="same_surname_name">Exist same owner with same name and surname: %1$s, %2$s</string>
    <string name="customer_name">Customer name</string>
    <string name="pet_name">Pet name</string>
    <string name="hour">Hour</string>
    <string name="date">date</string>
</resources>
